--- a/en_US/faq.html
+++ b/en_US/faq.html
@@ -26,14 +26,14 @@
 				<header id="header">
 					<a class="logo">Languages:</a>
 					<ul class="icons">
-						<li><a href="../fr_FR/faq.html" class="image"><img
+						<li><a href="../en_US/faq.html" class="image"><img
 									src="../images/united_states_of_america_round_icon_64.png"
 									alt="English (en_US)" /></a>
 						</li>
 						<li><a href="../fr_FR/faq.html" class="image"><img src="../images/france_round_icon_64.png"
 									alt="Français (fr_FR)" /></a>
 						</li>
-						<li><a href="../fr_FR/faq.html" class="image"><img src="../images/germany_round_icon_64.png"
+						<li><a href="../de_DE/faq.html" class="image"><img src="../images/germany_round_icon_64.png"
 									alt="Deutsch (de_DE)" /></a>
 						</li>
 					</ul>
