--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-	<meta http-equiv="refresh" content="5; URL=https://manual.skribisto.eu/" />
+	<meta http-equiv="refresh" content="3; URL=https://manual.skribisto.eu/en_US/manual.html" />
 </head>
 
 <body>
-	<p>If you are not redirected in five seconds, <a href="https://manual.skribisto.eu/">click here</a>.</p>
+	<p>If you are not redirected in five seconds, <a href="https://manual.skribisto.eu/en_US/manual.html">click
+			here</a>.</p>
 </body>
 
 </html>
