--- a/en_US/faq.html
+++ b/en_US/faq.html
@@ -49,6 +49,9 @@
 					<p>If you don't find your answer in this FAQ or in the manual, you can always ask <a
 							href="https://github.com/jacquetc/skribisto/discussions">here</a>.</p>
 
+                    <h3>There are mistakes in the translation ! Can they be fixed ?</h3>
+                    <p>A first pass of translation was done with Google Translate, so if you find errors or a distinct lack of logic in a few words, you now the culprit ! You are invited to fix such mistakes by following the instructions <a href="https://github.com/jacquetc/skribisto#translation-">here</a>. It's free. No tool required, nothing to install.</p>
+
 					<h2 id=navigation>Navigation</h2>
 					<h3>How could I quickly open an item on a new view ?</h3>
 					<p>The quickest is to middle click on the item.</p>
