Add Spanish language

--- a/en_US/faq.html
+++ b/en_US/faq.html
@@ -36,6 +36,9 @@
 						<li><a href="../de_DE/faq.html" class="image"><img src="../images/germany_round_icon_64.png"
 									alt="Deutsch (de_DE)" /></a>
 						</li>
+						<li><a href="../es/faq.html" class="image"><img src="../images/spain_round_icon_64.png"
+									alt="Español (es)" /></a>
+						</li>
 					</ul>
 				</header>
 
