--- a/en_US/faq.html
+++ b/en_US/faq.html
@@ -45,44 +45,39 @@
 						<h1>FAQ - Frequently Asked Questions</h1>
 					</header>
 					<h2 id=general>General</h2>
-					<h3>Where could I ask my question ?</h3>
+					<h3>Where can I ask my question?</h3>
 					<p>If you don't find your answer in this FAQ or in the manual, you can always ask <a
 							href="https://github.com/jacquetc/skribisto/discussions">here</a>.</p>
 
-                    <h3>There are mistakes in the translation ! Can they be fixed ?</h3>
-                    <p>A first pass of translation was done with Google Translate, so if you find errors or a distinct lack of logic in a few words, you know the culprit ! You are invited to fix such mistakes by following the instructions <a href="https://github.com/jacquetc/skribisto#translation-">here</a>. It's free. No tool required, nothing to install.</p>
+                    <h3>There are mistakes in the translation! Can they be fixed?</h3>
+                    <p>A first pass of translation was done with Google Translate, so if you find errors or a distinct lack of logic in a few words, you know the culprit! You are invited to fix such mistakes by following the instructions <a href="https://github.com/jacquetc/skribisto#translation-">here</a>. It's free. No tool required, and nothing to install.</p>
 
 					<h2 id=navigation>Navigation</h2>
-					<h3>How could I quickly open an item on a new view ?</h3>
-					<p>The quickest is to middle click on the item.</p>
+					<h3>How can I quickly open an item on a new view ?</h3>
+					<p>The quickest way is to double-click on the item in the list.</p>
 
 					<h2 id=text>Text</h2>
-					<h3>How could I change the width of the main text area ?</h3>
-					<p>On the right side, in the "Edit" tool box, click on the "A" icon with the up arrow. A new menu
-						must
-						appear.</p>
+					<h3>How can I change the width of the main text area ?</h3>
+					<p>On the right side, in the "Edit" tool box, click on the "A" icon with the up arrow.  A new menu appears. Use the sliders to change the text width, text size, text indent, and top margin. When finished making adjustments, click into the the left arrow or click in the main text area. </p>
 
 					<h2 id=development>Development</h2>
-					<h3>Where could I find Skribisto repository ?</h3>
-					<p>The GitHub repository is <a href="https://github.com/jacquetc/skribisto">here</a>.</p>
+					<h3>Where can I find the Skribisto repository?</h3>
+					<p>The GitHub repository is located <a href="https://github.com/jacquetc/skribisto">here</a>.</p>
 
-					<h3>How could I help translate ?</h3>
+					<h3>How can I help with translation?</h3>
 					<p>Complete instructions are <a href="https://github.com/jacquetc/skribisto#translation-">here</a>.
 					</p>
-					<p>To shorten :
-						translate <a href="https://www.transifex.com/skribisto">here</a> (is's free) or create an issue
+					<p>To shorten:
+						translate <a href="https://www.transifex.com/skribisto">here</a> (it's free) or create an issue
 						<a href="https://github.com/jacquetc/skribisto/issues">here</a> if your language is missing.
 					</p>
 
 
 
-					<h3>How could I contribute to the code ?</h3>
-					<p>Firstly, before writing any change, maybe you can create an issue describing your modification,
-						so we
-						can discuss about it and so I can guide you ?
-					<p>After that, you can fork the repository, make your
-						change, then create a Push Request from your repository to mine.</p>
-					</p>
+					<h3>How can I contribute to the code?</h3>
+					<p>First, before writing any changes, please create an issue describing your modification. This way we can discuss it, I can 						gain some clarity on the idea, and I can offer some feedback.</p>
+					<p>If we agree on the ideas, you can fork the repository, make your change, then create a Push Request from your repository 						to mine.</p>
+					
 
 				</section>
 
